<resources>
    <string name="app_name" translatable="false">PageTurner</string>
    <string name="title">Title</string>
    <string name="app_desc">PageTurner is a syncing e-book reader that allows you to sync your reading progress over multiple devices.</string>
    <string name="browse">Browse…</string>
    <string name="open_file">Open ePub file</string>
    <string name="open_library">My Books</string>
    <string name="profile_day">Switch to day mode</string>
    <string name="profile_night">Switch to night mode</string>
    <string name="manual_sync">Sync reading progress</string>
    <string name="prefs">Settings</string>
    <string name="show_toc">Show TOC</string>
    <string name="rolling_blind">Auto-scroll</string>
    <string name="about">About PageTurner</string>
    <string name="about_gpl">PageTurner is free software under the GPL v3.</string>
    <string name="error_open_bk">Error opening book: %s</string>
    <string name="dictionary_lookup">Look up in Dictionary</string>
    <string name="wikipedia_lookup">Search on Wikipedia</string>
    <string name="google_lookup">Search on Google</string>
    <string name="word_select">"You selected '%s'</string>
    <string name="loading_wait">Loading, please wait</string>
    <string name="install_oi">Please install OI File Manager from the Android Market.</string>
    <string name="cloud_bm">Cloud bookmarks</string>
    <string name="toc_label">Table of contents</string>
    <string name="syncing">"Syncing progress…"</string>
    <string name="sync_failed">Sync failed</string>
    <string name="connection_fail">Could not connect to the sync server.</string>
    <string name="never_read">Never</string>
    <string name="library">Library</string>
    <string name="book_details">Book details</string>
    <string name="book_by">By %s</string>
    <string name="last_read">Last read: %s</string>
    <string name="added_to_lib">Added to library: %s</string>
    <string name="view_details">View details</string>
    <string name="delete">Delete</string>
    <string name="scan_books">Scan for books</string>
    <string name="importing_books">Importing books…</string>
    <string name="scanning_epub">Scanning for EPUB files.</string>
    <string name="importing">Importing %1$d of %2$d</string>
    <string name="scan_folders">Scanning for EPUB files.\nFolders scanned: %d</string>
    <string name="import_errors">Some files had errors while importing:</string>
    <string name="no_books_found">No books found.</string>
    <string name="no_bks_fnd_text">No books were found on your device.\nYou can download books at gutenberg.org or feedbooks.com</string>
    <string name="loading_library">Loading library…</string>
    <string name="scan_bks_question">There are no books in your library.\nWould you like to scan your device for books?</string>
    <string name="brightness">Brightness</string>
    <string-array name="v_animLabels">
        <item>Slide</item>
        <item>None</item>
    </string-array>
    <string-array name="h_animLabels">
        <item>Page flip</item>
        <item>Slide</item>
        <item>None</item>
    </string-array>
    <string-array name="orientationLabels">
        <item>Don\'t lock orientation</item>
        <item>Portrait</item>
        <item>Landscape</item>
        <item>Reverse Portrait</item>
        <item>Reverse Landscape</item>
    </string-array>
    <string-array name="autoscrollLabels">
        <item>Rolling blind</item>
        <item>Page change timer</item>
    </string-array>
    <string-array name="nook_touch_direction_labels">
        <item>Top buttons move forward</item>
        <item>Bottom buttons move forward</item>
    </string-array>
    <string-array name="libraryQueries">
        <item>Most recently read books</item>
        <item>Most recently added books</item>
        <item>Unread books</item>
        <item>All books by title</item>
        <item>All books by author</item>
    </string-array>
    <string name="access_denied">Your access-key is invalid. Please visit pageturner-reader.org to obtain a valid access key.</string>
    <string name="import_books">Import Books</string>
    <string name="import_desc">You can either scan your entire SD-Card, or specify a folder to search.</string>
    <string name="scan_whole_card">Scan my entire SD Card</string>
    <string name="scan_folder">Scan a specific folder</string>
    <string name="copy_to_library">Copy books to my library folder</string>
    <string name="no_such_folder">The folder %s does not exist.</string>
    <string name="import_failed">Import failed</string>
    <string name="list_view">Switch to list view</string>
    <string name="shelves_view">Switch to shelves view</string>
    <string name="read">Read now</string>
    <string name="download">Download books</string>
    <string name="downloading">Downloading book…</string>
    <string name="search_books">Search for books</string>
    <string name="enter_query">Please enter a search-term</string>
    <string name="buy_now">Buy now</string>
    <string name="enter_email">Cloud sync is currently disabled. To enable it, please enter an e-mail address in the preferences.</string>
    <string name="add_to_library">Add to library</string>
    <string name="search_wait">Searching… please wait.</string>
    <string name="search_text">Text search</string>
    <string name="search_hits">Searching…\nFound %d matches.</string>
    <string name="search_cancelled">Search cancelled.</string>
    <string name="search_no_matches">Search did not find any matches.</string>
    <string name="search_results">Search results</string>
    <string name="opening_file">Opening file…</string>
    <string name="loading_text">Loading text…</string>
    <string name="end_of_section">End of chapter.\nClick here to continue.</string>
    <string name="download_complete">Download complete.\nThe book has been added to your library</string>
    <string name="feed_failed">Could not contact the site. Please try again.</string>
    <string name="book_failed">Could not download the book. Please try again.</string>
    <string name="custom_site">My custom OPDS sites</string>
    <string name="add_site">Add custom site</string>
    <string name="edit_site">Edit custom site</string>
    <string name="add_site_header">What kind of site would you like to add?</string>
    <string name="calibre_server">Calibre content server</string>
    <string name="cops_server">COPS server</string>
    <string name="c2opds_server">Calibre2OPDS</string>
    <string name="generic_server">Generic OPDS site</string>
    <string name="save">Save changes</string>
    <string name="custom_site_desc">Your own OPDS / Calibre sites. You can add sites from the Preferences screen.</string>
    <string name="site_name">Site name</string>
    <string name="site_url">Site URL</string>
    <string name="site_desc">Description</string>
    <string name="site_username">Username</string>
    <string name="site_password">Password</string>
    <string name="msg_name_blank">Please fill in a name.</string>
    <string name="msg_url_blank">Please fill in a URL.</string>
    <string name="edit">Edit</string>
    <string name="no_custom_sites">You don\'t have any custom sites defined. Please add some in the preferences.</string>
    <string name="text_to_speech">Read out loud (TTS)</string>
    <string name="init_tts">Initializing TTS…\nPlease wait.</string>
    <string name="tts_failed">TTS Failed.</string>
    <string name="search_library">Search library</string>
    <string name="no_sync_points">You don\'t have any cloud-sync points stored yet.\nSync points are stored automatically when you leave PageTurner.</string>
    <string name="no_new_books_found">The scan did not find any new books.</string>
    <string name="next_page">Next page…</string>
    <string name="prev_page">Previous page…</string>
    <string name="empty_opds_feed">The feed was empty. Please check that you are using the correct URL.</string>
    <string name="search_results_item">Search results…</string>
    <string name="lookup_wiktionary">Search on Wiktionary</string>
    <string name="select_text">Select text</string>
    <string name="select_text_msg">Long-press a word to start text selection</string>
	<string name="no_search_results">Your search yielded no results.</string>
    <string name="dead_link">Sorry, it looks like the link you clicked is broken.</string>
    <string name="could_not_load">Could not load text: %s</string>
    <string name="out_of_memory">Sorry, PageTurner could not free enough memory to load this file.</string>
    <string name="highlight">Highlight</string>
    <string name="highlights">Highlights</string>
    <string name="highlight_options">Highlight options</string>
    <string name="text_note">Text note</string>
    <string name="clear_note">Clear note</string>
    <string name="save_note">Save note</string>
    <string name="set_colour">Set colour</string>
    <string name="page_number_of">Page %1$d of %2$d</string>
    <string name="import_this">Import this folder</string>
    <string name="cancelling">Cancelling…</string>
    <string name="no_bks_fnd_text2">No books were found on your device.\nWould you like to download some books?</string>
    <string name="notes_attached">This highlight has an attached text note.\nAre you sure you to delete it?</string>
    <string name="highlight_deleted">Highlight has been removed</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="add">Add</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_options">Bookmark options</string>
    <string name="bookmark_deleted">Bookmark has been removed</string>
    <string name="pref_sync_settings">Sync settings</string>
    <string name="pref_email">E-mail address</string>
    <string name="pref_email_summary">Used to sync your progress across devices. Leave blank to disable syncing.</string>
    <string name="pref_email_message">Please enter a valid e-mail address</string>
    <string name="pref_device_name">Device name</string>
    <string name="pref_device_name_summary">Unique name for this device, for conflict resolution.</string>
    <string name="pref_device_name_message">Please enter a name for this device.</string>
    <string name="pref_access_key">Access Key</string>
    <string name="pref_access_key_summary">An access key is required to use the synchronization service. Visit the site to learn how to get a key.</string>
    <string name="pref_access_key_message">Please enter your access key.</string>
    <string name="pref_sync_server">Sync Server</string>
    <string name="pref_sync_server_summary">Select which server you would like to sync with.</string>
    <string name="pref_sync_server_message">Please enter a sync server url.</string>
    <string name="pref_autoscroll_settings">Autoscroll settings</string>
    <string name="pref_scroll_style">Autoscroll style</string>
    <string name="pref_scroll_style_summary">Rolling blind or timer</string>
    <string name="pref_scroll_speed">Autoscrolling speed</string>
    <string name="pref_scroll_speed_summary">How many seconds a page will be displayed.</string>
    <string name="pref_my_books_settings">My Books settings</string>
    <string name="pref_copy_to_library">Copy to library folder</string>
    <string name="no_author_byline" translatable="false">by John Doe</string>
    <string name="small_text" translatable="false">Small Text</string>
    <string name="large_text" translatable="false">Large Text</string>
    <string name="default_added_to_library" translatable="false">Added to library: never</string>
    <string name="default_last_read" translatable="false">Last read: never</string>
    <string name="default_filename" translatable="false">book.epub</string>
    <string name="default_book_title" translatable="false">Title of the book</string>
</resources>