<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/importDialogLayout"
    android:layout_margin="20dip">

    

    <TextView        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_desc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioScanSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/scan_whole_card" />

        <RadioButton
            android:id="@+id/radioScanFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_folder" />
    </RadioGroup>

    <EditText
        android:id="@+id/folderToScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:text="/sdcard/eBooks">
        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/copyToLib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_to_library" />

</LinearLayout>