<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/mainLayout">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topBlock">

        <include layout="@layout/large_book_cover"
                 android:id="@+id/itemIcon"/>

        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:orientation="vertical"
                      android:layout_centerInParent="true"
                      android:layout_toRightOf="@id/itemIcon">
        <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

        <TextView
                android:id="@+id/itemAuthor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_author_byline"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>






    </RelativeLayout>


    <View style="@style/Divider"/>


    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View style="@style/Divider"/>


    <LinearLayout

            android:id="@+id/relatedLinksContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buyNowButton"
                android:text="@string/buy_now"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/readNowButton"
                android:text="@string/read"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addToLibraryButton"
                android:text="@string/add_to_library"
                />



        </LinearLayout>


</LinearLayout>
</ScrollView>
